--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -158,7 +158,7 @@ body {
 .main-button-red a {
   font-size: 13px;
   color: #fff;
-  background-color: #a12c2f;
+  background-color: #2E4570;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -263,11 +263,11 @@ header
 }
 
 .background-header .main-nav .nav li:hover a {
-  color: #fb5849!important;
+  color: #2E4570!important;
 }
 
 .background-header .nav li a.active {
-  color: #fb5849!important;
+  color: #2E4570!important;
 }
 
 .header-area {
@@ -779,7 +779,7 @@ services
 }
 
 .services .item {
-  background-image: url(../images/service-item-bg.jpg);
+  background-image: url(../images/service-item-bg_f.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -930,7 +930,7 @@ section.upcoming-meetings .categories ul li a {
 }
 
 section.upcoming-meetings .categories ul li a:hover {
-  color: #a12c2f;
+  color: #2E4570;
 }
 
 section.upcoming-meetings .categories .main-button-red {
@@ -990,7 +990,7 @@ section.upcoming-meetings .categories .main-button-red a {
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #a12c2f;
+  color: #2E4570;
 }
 
 .meeting-item .down-content .date span {
@@ -1143,7 +1143,7 @@ section.our-courses {
 }
 
 .our-courses .item .down-content .info span {
-  color: #a12c2f;
+  color: #2E4570;
   font-size: 15px;
   font-weight: 600;
   text-align: right;
@@ -1383,7 +1383,7 @@ section.contact-us #contact textarea {
 section.contact-us #contact button {
   font-size: 13px;
   color: #fff;
-  background-color: #a12c2f;
+  background-color: #2E4570;
   padding: 12px 30px;
   display: inline-block;
   border-radius: 22px;
@@ -1399,7 +1399,7 @@ section.contact-us #contact button:hover {
 }
 
 section.contact-us .right-info {
-  background-color: #a12c2f;
+  background-color: #2E4570;
   border-radius: 20px;
   padding: 40px;
 }
@@ -1507,7 +1507,7 @@ section.meetings-page .filters {
 
 section.meetings-page .filters li {
   font-size: 13px;
-  color: #a12c2f;
+  color: #2E4570;
   background-color: #fff;
   padding: 11px 30px;
   display: inline-block;
@@ -1521,7 +1521,7 @@ section.meetings-page .filters li {
 
 section.meetings-page .filters ul li.active,
 section.meetings-page .filters ul li:hover {
-  background-color: #a12c2f;
+  background-color: #2E4570;
   color: #fff;
 }
 
@@ -1562,7 +1562,7 @@ section.meetings-page .main-button-red a {
 
 section.meetings-page .pagination ul li.active a,
 section.meetings-page .pagination ul li a:hover {
-  background-color: #a12c2f;
+  background-color: #2E4570;
   color: #fff;
 }
 
@@ -1613,7 +1613,7 @@ section.meetings-page .pagination ul li a:hover {
   font-size: 13px;
   text-transform: uppercase;
   font-weight: 600;
-  color: #a12c2f;
+  color: #2E4570;
 }
 
 .meeting-single-item .thumb .date span {
