--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -271,7 +271,7 @@ header
 }
 
 .header-area {
-  background-color: rgba(250,250,250,0.15);
+  background-color: rgba(250, 250, 250, 0.15);
   position: absolute;
   top: 40px;
   left: 0;
@@ -702,9 +702,10 @@ banner
     display: none !important;
 }
 
+/* backgroundcolor for index image */
 .video-overlay {
     position: absolute;
-    background-color: rgba(31,39,43,0.75);
+    background-color: #5d5b79;
     top: 0;
     left: 0;
     bottom: 0;
@@ -1455,14 +1456,23 @@ heading page
 */
 
 section.heading-page {
-  background-image: url(../images/heading-bg.jpg);
-  background-position: center center;
+  background-image: url(../images/can_1111.png), linear-gradient(to right, transparent, #5D5B79 1px);
+  background-position: center center, center center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover, cover;
   padding-top: 230px;
   padding-bottom: 110px;
   text-align: center;
 }
+
+@media screen and (min-width: 1600px) {
+  section.heading-page {
+    background-size: 1600px auto, 100% 100%;
+  }
+}
+
+
+
 
 section.heading-page h6 {
   margin-top: 0px;
