--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -291,7 +291,7 @@ header
 
 .header-area .main-nav .logo {
   line-height: 100px;
-  color: #fff;
+  color: #ffffff;
   font-size: 28px;
   font-weight: 700;
   text-transform: uppercase;
